
syntax = "proto3";

package ipad;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.camelia.example.ipad";
option java_outer_classname = "IPadProto";

// The greeting service definition.
service IPadService {

     rpc AllSongs (ArtistId) returns (SongList) {}

     rpc GetArtists (google.protobuf.Empty) returns (stream AllArtists) {}
}

message ArtistId {
  int32 id = 1;
}

message Artist {
  int32 id = 1;
  string name = 2;
}

message Song {
  int32 id = 1;
  string name = 2;
  Artist artist = 3;
}

message SongList {
  repeated Song songs= 1;
}

message Artists {
   string artist = 1;
   string genre = 2;
   string decade =3;
}

message AllArtists {
    repeated Artists artists = 1;
}